--- a/src/_install/_containers/django-api/requirements.txt
+++ b/src/_install/_containers/django-api/requirements.txt
@@ -1,9 +1,9 @@
 
 python-dotenv==1.0.1
 
-Django==5.1.3
+django==4.2.16
 djangorestframework==3.15.2
-django-cors-headers==4.6.0
+django-cors-headers==4.4.0
 
 ## Authentication
 djoser==2.3.1
