--- a/src/_install/_containers/react-front/package.json
+++ b/src/_install/_containers/react-front/package.json
@@ -4,14 +4,15 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "axios": "^1.6.8",
-    "react-router-dom": "6.23.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.4",
     "@mui/icons-material": "^5.15.17",
-    "@mui/material": "^5.15.17"
+    "@mui/material": "^5.15.17",
+    "axios": "^1.6.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "6.23.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
