--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,17 +4,23 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "axios": "^1.6.8",
-    "react-router-dom": "6.23.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.4",
     "@mui/icons-material": "^5.15.17",
-    "@mui/material": "^5.15.17"
+    "@mui/material": "^5.15.17",
+    "axios": "^1.6.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "6.23.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.15.0",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
@@ -23,12 +29,17 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
+    "vite": "^6.0.1",
+    "vite-jest": "^0.1.4"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll",
+    "cov": "jest --coverage --collectCoverageFrom='src/**/*.{js,jsx}'"
   }
 }
